--- a/resources/script.html
+++ b/resources/script.html
@@ -79,7 +79,9 @@ Just for Today:  Jason<br />
   a selected piece of NA literature, after which we'll open the meeting up for sharing.
   If you would like to participate in reading read please raise your hand in Zoom now.</b></p>-->
 
-<p>Please mute your line except when you are sharing. You can find the mute button on the zoom app on your phone or in your browser.  In the spirit of fellowship and unity we invite you to enable your video.</p>
+<p>Please mute your line except when you are sharing. You can find the mute button on the zoom app on your phone or in your browser. 
+	In the spirit of fellowship and unity we invite you to enable your video. However, if you are moving around or cannot keep your 
+	camera still, we ask that you keep your video off so you do not distract from the message of recovery.</p>
 
 <!--<p><b>Note: This is a ONE HOUR meeting.  Some websites have incorrectly listed it as one and a half hours. We apologize for the confusion. This meeting will end promptly at [7AM | 1PM | 7PM] Pacific Time</b></p>-->
 
@@ -96,13 +98,23 @@ Just for Today:  Jason<br />
 <h2 style="color:#008000";>What is the Narcotics Anonymous Program?</h2>
 
 
-<p  style="color:#000000">NA is a nonprofit fellowship or society of men and women for whom drugs had become a major problem. We are recovering addicts who meet regularly to help each other stay clean. This is a program of complete abstinence from all drugs. There is only one requirement for membership, the desire to stop using. We suggest that you keep an open mind and give yourself a break. Our program is a set of principles written so simply that we can follow them in our daily lives. The most important thing about them is that they work.</p>
-<p  style="color:#000000">There are no strings attached to N.A. We are not affiliated with any other organizations, we have no initiation fees or dues, no pledges to sign, no promises to make to anyone. We are not connected with any political, religious, or law enforcement groups, and are under no surveillance at any time. Anyone may join us, regardless of age, race, sexual identity, creed, religion or lack of religion.</p>
-<p  style="color:#000000">We are not interested in what or how much you used, who your connections were, what you have done in the past, how much or how little you have, but only in what you want to do about your problem and how we can help. The newcomer is the most important person at any meeting, because we can only keep what we have by giving it away. We have learned from our group experience that those who keep coming to our meetings regularly stay clean.</p>
+<p  style="color:#000000">NA is a nonprofit fellowship or society of men and women for whom drugs had become a major problem. 
+	We are recovering addicts who meet regularly to help each other stay clean. This is a program of complete abstinence from all drugs. 
+	There is only one requirement for membership, the desire to stop using. We suggest that you keep an open mind and give yourself a break. 
+	Our program is a set of principles written so simply that we can follow them in our daily lives. 
+	The most important thing about them is that they work.</p>
+<p  style="color:#000000">There are no strings attached to N.A. We are not affiliated with any other organizations, we have no initiation fees or dues, 
+	no pledges to sign, no promises to make to anyone. We are not connected with any political, religious, or law enforcement groups, and are 
+	under no surveillance at any time. Anyone may join us, regardless of age, race, sexual identity, creed, religion or lack of religion.</p>
+<p  style="color:#000000">We are not interested in what or how much you used, who your connections were, what you have done in the past, how much or 
+	how little you have, but only in what you want to do about your problem and how we can help. The newcomer is the most important person at 
+	any meeting, because we can only keep what we have by giving it away. We have learned from our group experience that those who keep coming 
+	to our meetings regularly stay clean.</p>
 
 <h2><b><i>(Newcomers)</i></b></h2>
 
-<p>Is there anyone in their first 30 days who would like to introduce yourselves by your first name and where you're calling from? This is not to embarrass you, just so we may get to know you better. Please raise your hand in Zoom and I will call on you.<b><i>(Write down names)</i></b></p>
+<p>Is there anyone in their first 30 days who would like to introduce yourselves by your first name and where you're calling from? This is not to 
+	embarrass you, just so we may get to know you better. Please raise your hand in Zoom and I will call on you.<b><i>(Write down names)</i></b></p>
 
 <h2><b><i>(Readings)</i></b></h2>
 <p>(Ask previously assigned volunteers to read - ask by name)<p>
@@ -118,8 +130,15 @@ I have asked <i>NAME</i> to read <span  style="color:#008000">The Twelve Traditi
 
 
 <p>
-An excerpt from our fourth tradition states, "It is also important to consider how we're viewed by society. When N.A. meetings first began in many places, it was illegal for addicts to meet under any circumstances. Even where meetings are legal, the public often views groups of addicts with alarm. Until N.A. has established a good public reputation, it may be difficult for addicts to find meeting places. If our behavior as N.A. members is still destructive and selfish, we will once again have difficulty meeting openly. We help protect our reputation as a fellowship when we use our meeting facilities with respect, keeping them clean and in good repair. We should take care to act like good neighbors, conducting ourselves respectfully. If the public reputation of Narcotics Anonymous is somehow impaired, addicts may die."<p>
-
+An excerpt from our fourth tradition states, "It is also important to consider how we're viewed by society. When N.A. meetings first began in many 
+	  places, it was illegal for addicts to meet under any circumstances. Even where meetings are legal, the public often views groups of addicts 
+	  with alarm. Until N.A. has established a good public reputation, it may be difficult for addicts to find meeting places. If our behavior as 
+	  N.A. members is still destructive and selfish, we will once again have difficulty meeting openly. We help protect our reputation as a 
+	  fellowship when we use our meeting facilities with respect, keeping them clean and in good repair. We should take care to act like good 
+	  neighbors, conducting ourselves respectfully. If the public reputation of Narcotics Anonymous is somehow impaired, addicts may die."
+<p>
+If you want to pick up a medallion or key tag in-person with this group, we celebrate milestones in recovery the second Sunday of the month at the 6 p.m. 
+	meeting.
 
 <p>
 If you have celebrated a recovery milestone in the last week, please introduce yourself by name, your location,
@@ -135,10 +154,6 @@ and your clean date. Please raise your hand in Zoom and I will call on you. <b><
 <p><b>
 On Sundays at 6pm and Tuesdays at 6am we have hybrid meetings. On Thursdays at 6am, we have both an online meeting and an in-person-only 
 	meeting to choose from. All other meetings are online. Join us in person at Faith Lutheran Church in Los Gatos.
-</b></p>
-<p><b>
-If you want to pick up a medallion or key tag in-person with this group, we celebrate milestones in recovery the second Sunday of the 
-	month at the 6 p.m. meeting.
 </b></p>
 <p><b>
 We are currently looking to fill the following service positions: Alternate GSR and Recording Secretary. Come to our next Group Conscience 
