--- a/resources/chat-announcements.html
+++ b/resources/chat-announcements.html
@@ -35,7 +35,8 @@ body {
 <div id="wrap">
 WELCOME FROM LOS GATOS HOME GROUP.<br /><br />
 
-This meeting is brought to you by the members of Los Gatos Home Group in Los Gatos California, for humans who are addicts and addicts who are humans to gather and share their experience, strength and hope, and to help carry the NA message to the addict who still suffers.<br /><br />
+This meeting is brought to you by the members of Los Gatos Home Group in Los Gatos California, for addicts and addicts to gather and share their 
+	experience, strength and hope, and to help carry the NA message to the addict who still suffers.<br /><br />
 
 Our meeting schedule is posted here: http://lghg.org/
 <br />
@@ -47,7 +48,8 @@ Downloadable literature can be found at: https://www.na.org/?ID=ips-eng-index<br
 <div id="wrap">
 Welcome from Los Gatos Home Group<br /><br />
 
-NA In Place is an online meeting place brought to you by the members of Los Gatos Home Group in Los Gatos California, for humans who are addicts and addicts who are humans to gather and share their experience, strength and hope, and to help carry the NA message to the addict who still suffers.
+NA In Place is an online meeting place brought to you by the members of Los Gatos Home Group in Los Gatos California, for humans who are addicts 
+and addicts who are humans to gather and share their experience, strength and hope, and to help carry the NA message to the addict who still suffers.
 
 Our meeting schedule is posted here: http://na-in-place.org/
 
