--- a/resources/script.html
+++ b/resources/script.html
@@ -202,9 +202,11 @@ This is a one-hour book study meeting. The group will read a section from
   If you would like to read please raise your hand in Zoom. Tonight our reading is from Living Clean, starting on page 189, "Getting Out of Our Own Way." </p>
   
 <p><i>[Tag Topic Meeting]</i><br />
-This is a tag topic meeting: I [secretary] will pick a person and a
-<a target="prompts" href="http://na-in-place.org/lghg/prompts2.pdf"><b>Topic</b></a> for them to share on and then that person will pick a new person
-and a new topic for that person to share on.</p>
+This is a one-hour tag topic meeting. I will pick a person and a <a target="prompts" href="http://na-in-place.org/lghg/prompts2.pdf"><b>Topic</b></a>
+	for them to share on. At the end of your turn please select the next speaker and then that person will receive a new topic to share on. This 
+	will repeat until we are out of time.</p>
+<b><i>Note: If you prefer to randomize topic selection you can use this 
+	<a target="wheel" href=https://wheelofnames.com/zcm-3vk><b>spinning wheel</b></a></b></i>
 <b><i>Note: if you prefer you can use this <a target="wheel" href="https://wheeldecide.com/index.php?c1=Surrender&c2=Commitment&c3=Selflessness&c4=Empathy&c5=Goodwill&c6=Hope.&c7=Humility&c8=Tolerance&c9=Compassion&c10=Patience&c11=Willingness&c12=Service&c13=Freedom&c14=Courage&c15=Responsibility&c16=Inclusiveness&c17=Open-Mindedness&c18=Independence&c19=Connection&c20=Faith&c21=Self-Examination&c22=Balance&c23=Confidence&c24=Perseverance&c25=Gratitude&c26=Fellowship&c27=Sacrifice&c28=Flexibility&c29=Self-Acceptance&c30=+Friendship&c31=Unconditional+Love&c32=Wisdom&c33=Acceptance&c34=Forgiveness&c35=Growth&c36=Sponsorship&c37=Honesty&c38=Self-Respect&c39=Humor&c40=Communication&c41=Being+Involved&c42=Sharing&c43=Discipline&c44=Identity&c45=Spiritual+Awareness&c46=Consistency&c47=Kindness&c48=+Clarity&c49=Motivation&c50=Self-Esteem&c51=+Action&c52=Stability&c53=Integrity&c54=Dignity&c55=Respect&c56=Generosity&c57=Stepwork&c58=Current+Step&c59=The+First+Step&c60=The+Second+Step&c61=The+Third+Step&c62=The+Fourth+Step&c63=The+Fifth+Step&c64=The+Sixth+Step&c65=The+Seventh+Step&c66=The+Eighth+Step&c67=The+Ninth+Step&c68=The+Tenth+Step&c69=The+Eleventh+Step&c70=The+Twelfth+Step&time=5">spinning wheel</a> to select a topic</i></b>
 
 <p><i>[Spiritual Principle Tag Meeting]</i></br>
