--- a/survey/index.html
+++ b/survey/index.html
@@ -1,4 +1,4 @@
 <head>
-  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/1YliaWg1N0z5dTOgLueLSjibOJsqQO4yfnfYfA6QNnPs/edit">
+  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/1hixuGqoJ4LI6YARiidolPMa_laj2tW6vlvIIZAtcODM/edit?pli=1">
 </head>
 
