--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@ THERE WAS A POTENTIAL COVID EXPOSURE AT OUR SUNDAY 6PM MEETING ON 1/2/2022. IF Y
 </div>
       <br />
       <br />
-      <p>Welcome to Los Gatos Home Group</p>
+	  <p><b>Welcome to Los Gatos Home Group</p></b>
       <p>Founded in 1989 in Los Gatos California, <b><a href="http://lghg.org">Los Gatos Home Group</a></b>  has been carrying the message to 
 	      addicts for over thirty years. In affiliation with <b><a href="http://na-in-place.org">NA In Place</a></b> we were able to rapidly 
 	      respond to the current world situation and bring our meetings online. See below for meeting schedule and instructions on joining.</p>
 	  
-	<p> </p>
-	<p> </p>
-      <p>August 2022 Home Group Secretary Elections and More</p>
+      <p> </p>
+      <p> </p>
+      <br />
+	<p><b>August 2022 Home Group Secretary Elections and More</p></b>
 	<p>Los Gatos Home Group will be holding elections for all secretary positions - both on-line and in-person - at our next Group Conscience 
 		Meeting on Sunday, August 29 at 2pm. You must be present to be elected, however you can nominate yourself or others beforehand - 
 		or at the Group Conscience Meeting. If you'd like to nominate yourself or others now, please use our <b><a href="http://lghg.org/survey">Election Nominations Form</a></b>.</p>
