--- a/resources/script.html
+++ b/resources/script.html
@@ -152,20 +152,9 @@ and your clean date. Please raise your hand in Zoom and I will call on you. <b><
 </b></p>
 
 <p><b>
-On Sundays at 6pm and Tuesdays at 6am we have hybrid meetings. On Thursdays at 6am, we have both an online meeting and an in-person-only 
-	meeting to choose from. All other meetings are online. Join us in person at Faith Lutheran Church in Los Gatos.
-</b></p>
-<p><b>
-We are currently looking to fill the following service positions: Alternate GSR and Recording Secretary. Come to our next Group Conscience 
-	meeting on Sunday July 31 at 3pm to volunteer for service. 
-</p></b>
-<p><b>
-Additional details for meetings and service opportunities can be found at lghg.org.
-</p></b>
-<p><b>
-We also are looking for members that want to help host and co-host our meetings. If you have at least 3 months clean time, a computer, 
-	and the ability to learn Zoom, we will provide training to get you started. If you’re interested, email your contact info and 
-	availability to lghg.service@gmail.com.
+Los Gatos Home Group will have elections at our next Group Conscience meeting on August 28 at 2pm PST. All secretary positions will be open as 
+	well as a couple of administrative roles. If you are looking for a service position or know someone who is, we encourage you to visit 
+	www.lghg.org/survey to volunteer yourself or nominate someone or attend our business meeting. Members must be present to be elected.
 </b></p>
 
 <p>
