--- a/service/index.html
+++ b/service/index.html
@@ -1,1 +1,3 @@
-Testing....
+<head>
+  <meta http-equiv="Refresh" content="0; URL=https://docs.google.com/forms/d/1hixuGqoJ4LI6YARiidolPMa_laj2tW6vlvIIZAtcODM/edit?pli=1">
+</head>
