--- a/resources/script.html
+++ b/resources/script.html
@@ -154,7 +154,7 @@ and your clean date. Please raise your hand in Zoom and I will call on you. <b><
 <p><b>
 Los Gatos Home Group will have elections at our next Group Conscience meeting on August 28 at 2pm PST. All secretary positions will be open as 
 	well as a couple of administrative roles. If you are looking for a service position or know someone who is, we encourage you to visit our  
-	<b><a href="http://lghg.org/survey">Election Nominations Form</a></b> (www.lghg.org/survey) to volunteer yourself or nominate someone or attend our business 
+	<b><a href="http://lghg.org/service">Election Nominations Form</a></b> (www.lghg.org/service) to volunteer yourself or nominate someone or attend our business 
 	meeting. Members must be present to be elected.
 </b></p>
 
