Attendance Sheets change

--- a/resources/chat-announcements.html
+++ b/resources/chat-announcements.html
@@ -195,7 +195,7 @@ On Tuesdays and Saturdays our Attendance Chair collects all the requests and sen
 <div id="wrap">
 ATTENDANCE VALIDATION<br />
 We received your attendance request and will send you a confirmation
-email in the next few days. Thanks for joining us today.
+email within the next week. Thanks for joining us today.
 </div>
 
 
