--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         </div>
       </li>
-       <li class="nav-item dropdown">
+<!--       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stats</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#">---- Los Gatos Home Group ----</a>
@@ -107,7 +107,8 @@
           <a class="dropdown-item" href="#">-------------</a>
           <a class="dropdown-item" href="testimonials.txt">Testimonials</a>
         </div>
-      </li>
+	  </li>
+-->
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tutorials</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
