--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
-          <a class="dropdown-item" href="events/nextgc.html">LGHG Group Conscience August 28</a>
+          <a class="dropdown-item" href="events/nextgc.html">LGHG Group Conscience September 25</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
         </div>
       </li>
@@ -169,9 +169,9 @@ THERE WAS A POTENTIAL COVID EXPOSURE AT OUR SUNDAY 6PM MEETING ON 1/2/2022. IF Y
       <p> </p>
       <p> </p>
       <br />
-	<p><b>August 2022 Home Group Secretary Elections and More</p></b>
-	<p>Los Gatos Home Group will be holding elections for all secretary positions - both on-line and in-person - at our next Group Conscience 
-		Meeting on Sunday, August 28 at 2pm. You must be present to be elected, however you can nominate yourself or others beforehand - 
+	<p><b>September 2022 Home Group Secretary Elections and More</p></b>
+	<p>Los Gatos Home Group will be holding elections for some remaining secretary and admin positions at our next Group Conscience 
+		Meeting on Sunday, September 25 at 3pm. You must be present to be elected, however you can nominate yourself or others beforehand - 
 		or at the Group Conscience Meeting. If you'd like to nominate yourself or others now, please use our <b><a href="http://lghg.org/service">Election Nominations Form</a></b>.</p>
 
 
