GC Meeting Link on HP

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ THERE WAS A POTENTIAL COVID EXPOSURE AT OUR SUNDAY 6PM MEETING ON 1/2/2022. IF Y
       <p> </p>
       <p> </p>
       <br />
-	<p><b>September 2022 Home Group Secretary Elections and More</p></b>
-	<p>Los Gatos Home Group will be holding elections for some remaining secretary and admin positions at our next Group Conscience 
-		Meeting on Sunday, September 25 at 3pm. You must be present to be elected, however you can nominate yourself or others beforehand - 
-		or at the Group Conscience Meeting. If you'd like to nominate yourself or others now, please use our <b><a href="http://lghg.org/service">Election Nominations Form</a></b>.</p>
+	<p><b>September 2022 Home Group Group Conscience Meeting - September 25 at 3pm</p></b>
+	<p>Los Gatos Home Group will be having our next Group Conscience Meeting. Several admin and secretary positions are still available. Please 
+		join us, and if you want to nominate yourself or others, please use our <b><a href="http://lghg.org/service">Election Nominations Form</a></b>.</p>
+	<p>To connect to our Monthly Group Conscience Meeting, use this link: <b><a href="https://us02web.zoom.us/j/87908191815">Group Conscience Meeting Zoom</a></b>.</p>
 
 
   </div>
