New Announcements Sept.

--- a/resources/announcements.html
+++ b/resources/announcements.html
@@ -30,9 +30,19 @@ body {
 <div id="announce" style=background:#CCE5FF>
 
 <p><b>
-Los Gatos Home Group will have elections at our next Group Conscience meeting on August 28 at 2pm PST. All secretary positions will be open as 
-	well as a couple of administrative roles. If you are looking for a service position or know someone who is, we encourage you to visit our  
-	<b><a href="http://lghg.org/service">Election Nominations Form</a></b> (www.lghg.org/service) to volunteer yourself or nominate someone or attend our business meeting. Members must be present to be elected.
+Our Thursday and Friday noon meetings will be suspended, effective immediately due to lack of available trusted servants.
+</b></p>
+<p><b>
+After our recent elections, we still have a few online secretary vacancies to fill. Sunday 6pm, Monday 6am, and Tuesday 6pm. 
+	Please come to our next group conscience meeting on October 2 at 3pm to be elected.
+</b></p>
+<p><b>
+The following are some upcoming local events:
+<ul>
+	<li>September 10th: H&I FREE BBQ, 10-3pm located at the Lincoln Glen Church in San Jose</li>
+	<li>September 17th: The Annual South County BBQ, 11-6pm at the Christmas Hill Park in Gilroy</li>
+	<li>Stating October 2nd: The Birthday Meeting is back, every 1st Sunday of the month at 1200 Blossom Hill Rd</li>
+</ul>
 </b></p>
 
 <p>
