--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <a class="dropdown-item" href="#"><b>countless</b> meetings to date</a>
           <a class="dropdown-item" href="#">---- Online Meetings ----</a>
           <!--                ONLINE STATS UPDATED AFTER FRIDAY DECEMBER 6 NOON MEETING   -->
-          <a class="dropdown-item" href="#"><b>1 year 6 months</b> days in operation</a>
+<!--          <a class="dropdown-item" href="#"><b>1 year 6 months</b> days in operation</a>
           <a class="dropdown-item" href="#"><b>1800</b> meetings to date</a>
           <a class="dropdown-item" href="#"><b>Over 40000</b> attendees</a>
           <a class="dropdown-item" href="#">-------------</a>
