--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a class="dropdown-item" target="meetingsheet" href="resources/MeetingSheet.pdf">Meeting Sheet</a>
           <a class="dropdown-item" target="concepts" href="https://na.org/admin/include/spaw2/uploads/pdf/litfiles/us_english/Booklet/Twelve%20Concepts.pdf">Twelve Concepts</a>
           <a class="dropdown-item" target="literature" href="http://m.na.org/?ID=ips-eng-index">Recovery Literature</a>
-          <a class="dropdown-item" target="before_elections" href="events/before_elections.html">Before Elections</a>
+          <a class="dropdown-item" target="before_elections" href="resources/before_elections.html">Before Elections</a>
 
         </div>
       </li>
