Holiday Party Prep

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 <!--          <a class="dropdown-item" href="#">---- coming up ----</a> -->
           <a class="dropdown-item" href="events/nextgc.html">LGHG Group Conscience October 2</a>
           <a class="dropdown-item" href="#meetings">Chip Meeting Second Sunday at 6pm</a>
-        </div>
+<!--		<a class="dropdown-item" href="events/2022HolidayPartyFlier.pdf">2022 Holiday Party - Dec. 17!</a> -->
+	</div>
       </li>
    <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
